Fix alignment on the main div link Fix width on every item in the card decks Fix the blue outline on the video link after exit the video

--- a/css/habiqo_styles.css
+++ b/css/habiqo_styles.css
@@ -111,7 +111,7 @@ progress::-webkit-progress-bar {
 .navbar {
     padding-top: 30px;
     padding-bottom: 30px;
-    background: #E9ECEF !important;
+    background: #FFF !important;
 }
 
 .nav-item {
@@ -151,6 +151,11 @@ progress::-webkit-progress-bar {
     color: white;
 }
 
+.main-div-container > div {
+    background-color: #6f42c1 !important;
+    text-align: left;
+}
+
 /* LOGO */
 .main-div-container > div > img {
     position: absolute;
@@ -159,6 +164,7 @@ progress::-webkit-progress-bar {
     height: 90px;
     margin-right: auto;
     top: 30%;
+    padding-left: 2px;
 }
 
 .purpose-text {
@@ -175,6 +181,7 @@ progress::-webkit-progress-bar {
 }
 
 #learn-more-link {
+    padding-left: 2px;
     position: absolute;
     font-size: 16px;
     text-align: left;
@@ -308,6 +315,11 @@ progress::-webkit-progress-bar {
     height: 60px;
 }
 
+/* TODO invisible link here, fix*/
+.popup-youtube {
+    outline: none;
+}
+
 #content-video-container > p {
     margin-top: 36px;
     margin-bottom: 36px;
@@ -376,29 +388,29 @@ progress::-webkit-progress-bar {
 }
 
 #card-img-1 {
-    width: 80px;
+    width: 60px;
     height: 80px;
 }
 
 #card-img-2 {
-    width: 94px;
+    width: 75px;
     margin-bottom: 0 !important;
 }
 
 #card-img-3 {
-    width: 70px;
+    width: 58px;
 }
 
 #card-img-4 {
-    width: 71px;
+    width: 60px;
 }
 
 #card-img-5 {
-    width: 74px;
+    width: 60px;
 }
 
 #card-img-6 {
-    width: 80px;
+    width: 55px;
 }
 
 .card-title {
@@ -828,6 +840,7 @@ progress::-webkit-progress-bar {
 .form-control,
 .form-control:focus {
     background-color: #f5f5f7;
+    border: none;
     border-radius: 0;
 }
 
